# learn_by_doing

./: .gitignore  .rvmrc  README.md  Rakefile  config.ru
ajaxify_your_site/: .rake_tasks~
ajaxify_your_site/config/: application.rb  environment.rb  routes.rb
ajaxify_your_site/db/: development.sqlite3  schema.rb
angularjs/app-controller-scope/: index.html
angularjs/directives/: app.js  index.html  weather.html
angularjs/hello-world/: index.html
angularjs/isolate-scope/: app.css  app.js  cars-table.html  index.html
angularjs/myapp/: index.html
angularjs/wrap_a_jquery_datepicker/: app.js  datepicker.js  index.html
ansible/tmp/: test_register_with_skipped_task.yml  ubuntu-servers
app/controllers/: products_controller.rb
config/: routes.rb
config/initializers/: secret_token.rb  session_store.rb
cpp/lcd_numbers/: CMakeLists.txt  lcd_numbers.cpp
cpp/lcd_numbers/mybuild/: CMakeCache.txt  Makefile  cmake_install.cmake  lcd
cpp/vector_vs_map/: .~lock.all.csv#  all.csv  build  build-all  build-and-run  common.cpp  if.csv  map  map.build  map.cpp  map.csv  map_duplicated_keys  map_duplicated_keys.cpp  map_duplicated_keys.csv  map_test  map_test.cpp  map_test.csv  map_unique_keys  map_unique_keys.cpp  map_unique_keys.csv  maps  maps.cpp  maps.csv  no-if.csv  result_vector_vs_map.csv  run  vector_million_small_maps  vector_million_small_maps.build  vector_million_small_maps.cpp  vector_million_small_vectors  vector_million_small_vectors.build  vector_million_small_vectors.cpp  vector_sort_after_all_push_back  vector_sort_after_all_push_back.build  (+14 more)
(+107 files in other folders)
